# rag-test-task

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
app/services/: __init__.py  attachments.py  extraction.py  pipeline.py  rag.py  resend_client.py  review.py
app/static/: styles.css
app/templates/: case_detail.html  dashboard.html  layout.html
data/kb/: approved_counterparties.md  contract_review_playbook.md  security_expectations.md  vendor_intake_exceptions.md
scripts/: generate_demo_assets.py
